grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $._declaration,
      $.expression_statement,
    ),

    // =========================================================================
    // Declarations
    // =========================================================================

    function_declaration: $ => seq(
      optional($._visibility),
      'func',
      field('name', $.identifier),
      optional($.generic_params),
      field('parameters', $.parameter_list),
      optional(field('return_type', $._type)),
      field('body', $.block),
    ),

    _visibility: $ => choice('public', 'package'),

    generic_params: $ => seq(
      '[',
      commaSep1($.generic_param),
      ']',
    ),

    generic_param: $ => seq(
      field('name', $.type_identifier),
      optional(seq(':', field('bound', $.type_identifier))),
    ),

    // Interface bundle list: `Display and Debug and Serialize`
    interface_list: $ => seq(
      $.type_identifier,
      repeat(seq('and', $.type_identifier)),
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')',
    ),

    parameter: $ => choice(
      // Regular parameter: name: Type [= default]
      seq(
        optional($._capability),
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('default', $._expression))),
      ),
      // Self parameter: [mut|take] self
      seq(
        optional($._capability),
        $.self_parameter,
      ),
    ),

    self_parameter: $ => 'self',

    _capability: $ => choice('read', 'mut', 'take'),

    struct_declaration: $ => seq(
      optional($._visibility),
      'struct',
      field('name', $.type_identifier),
      optional($.generic_params),
      '{',
      repeat(seq($.field_declaration, optional(','))),
      '}',
    ),

    field_declaration: $ => seq(
      optional($._visibility),
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    enum_declaration: $ => seq(
      optional($._visibility),
      'enum',
      field('name', $.type_identifier),
      optional($.generic_params),
      optional(seq(':', field('interfaces', $.interface_list))),
      '{',
      repeat(seq($.enum_variant, optional(','))),
      '}',
    ),

    enum_variant: $ => seq(
      field('name', $.type_identifier),
      optional(choice(
        seq('(', commaSep1($._type), ')'),
        seq('{', commaSep1($.field_declaration), '}'),
      )),
    ),

    interface_declaration: $ => choice(
      // Full interface with methods
      seq(
        optional($._visibility),
        'interface',
        field('name', $.type_identifier),
        optional($.generic_params),
        '{',
        repeat($.interface_method),
        '}',
      ),
      // Interface bundle
      seq(
        optional($._visibility),
        'interface',
        field('name', $.type_identifier),
        '=',
        $.interface_list,
      ),
    ),

    interface_method: $ => prec.right(seq(
      'func',
      field('name', $.identifier),
      optional($.generic_params),
      field('parameters', $.parameter_list),
      optional(field('return_type', $._type)),
    )),

    for_declaration: $ => seq(
      'for',
      optional($.generic_params),
      field('type', choice($.type_identifier, $.generic_type)),
      optional(seq('implement', field('interface', $.type_identifier))),
      '{',
      repeat($.method_declaration),
      '}',
    ),

    method_declaration: $ => seq(
      optional($._visibility),
      'func',
      field('name', $.identifier),
      optional($.generic_params),
      field('parameters', $.parameter_list),
      optional(field('return_type', $._type)),
      field('body', $.block),
    ),

    extern_block: $ => seq(
      'extern',
      field('abi', $.string_literal),
      '{',
      repeat($.extern_function),
      '}',
    ),

    extern_function: $ => prec.right(seq(
      'func',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(field('return_type', $._type)),
    )),

    test_declaration: $ => seq(
      'test',
      field('name', $.string_literal),
      field('body', $.block),
    ),

    type_alias_declaration: $ => seq(
      optional($._visibility),
      'type',
      field('name', $.type_identifier),
      optional($.generic_params),
      '=',
      field('target', $._type),
    ),

    top_level_let: $ => seq(
      'let',
      field('name', choice($.identifier, $.type_identifier)),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
    ),

    // =========================================================================
    // Statements
    // =========================================================================

    _statement: $ => choice(
      $.let_statement,
      $.var_statement,
      $.expression_statement,
    ),

    let_statement: $ => seq(
      optional('shared'),
      'let',
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
    ),

    expression_statement: $ => $._expression,

    // =========================================================================
    // Expressions
    // =========================================================================

    _expression: $ => choice(
      $.identifier,
      $.type_identifier,
      $._literal,
      $.parenthesized_expression,
      $.tuple_literal,
      $.array_literal,
      $.block,
      $.if_expression,
      $.match_expression,
      $.while_expression,
      $.for_expression,
      $.return_expression,
      $.error_expression,
      $.break_expression,
      $.continue_expression,
      $.binary_expression,
      $.unary_expression,
      $.call_expression,
      $.method_call_expression,
      $.field_expression,
      $.index_expression,
      $.type_cast,
      $.is_expression,
      $.struct_literal,
      $.closure_expression,
      $.fmt_expression,
      $.copy_expression,
      $.defer_expression,
      $.shared_expression,
      $.parallel_expression,
      $.detach_expression,
      $.unsafe_expression,
      $.when_expression,
      $.assignment_expression,
      $.otherwise_expression,
    ),

    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    if_expression: $ => seq(
      'if',
      field('condition', $._expression),
      field('consequence', $.block),
      optional(seq(
        'else',
        field('alternative', choice($.if_expression, $.block)),
      )),
    ),

    match_expression: $ => seq(
      'match',
      field('value', $._expression),
      '{',
      repeat(seq($.match_arm, optional(','))),
      '}',
    ),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      optional(seq('if', field('guard', $._expression))),
      'then',
      field('value', $._expression),
    ),

    while_expression: $ => seq(
      'while',
      field('condition', $._expression),
      field('body', $.block),
    ),

    for_expression: $ => seq(
      'for',
      optional($._capability),
      field('pattern', $._pattern),
      'in',
      field('iterable', $._expression),
      field('body', $.block),
    ),

    return_expression: $ => prec.left(seq('return', optional($._expression))),

    error_expression: $ => prec.left(seq('error', $._expression)),

    break_expression: $ => prec.left(seq('break', optional($._expression))),

    continue_expression: $ => 'continue',

    binary_expression: $ => {
      const table = [
        [PREC.OR, choice('or', 'xor')],
        [PREC.AND, 'and'],
        [PREC.BITWISE_OR, '|'],
        [PREC.BITWISE_XOR, '^'],
        [PREC.BITWISE_AND, '&'],
        [PREC.EQUALITY, choice('==', '!=')],
        [PREC.COMPARISON, choice('<', '<=', '>', '>=')],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.ADDITIVE, choice('+', '-')],
        [PREC.MULTIPLICATIVE, choice('*', '/', '%')],
      ];
      return choice(...table.map(([prec, op]) =>
        prec_left(prec, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        )),
      ));
    },

    call_expression: $ => prec(PREC.POSTFIX, seq(
      field('function', $._expression),
      optional($.type_arguments),
      field('arguments', $.argument_list),
    )),

    method_call_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._expression),
      '.',
      field('method', $.identifier),
      optional($.type_arguments),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      commaSep($.argument),
      ')',
    ),

    argument: $ => seq(
      optional($._capability),
      $._expression,
    ),

    field_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._expression),
      '.',
      field('field', choice($.identifier, $.type_identifier)),
    )),

    is_expression: $ => prec(PREC.POSTFIX, seq(
      field('value', $._expression),
      'is',
      field('pattern', $._pattern),
    )),

    struct_literal: $ => prec(PREC.POSTFIX, seq(
      $._struct_type_path,
      '{',
      repeat(seq($.struct_field_init, optional(','))),
      '}',
    )),

    // Type path for struct literals: `Name` or `Name.Variant`
    _struct_type_path: $ => choice(
      field('type', $.type_identifier),
      seq(field('type', $.type_identifier), '.', field('variant', $.type_identifier)),
    ),

    struct_field_init: $ => choice(
      seq(field('name', $.identifier), ':', field('value', $._expression)),
      field('name', $.identifier), // shorthand
    ),

    closure_expression: $ => seq(
      'func',
      field('parameters', $.parameter_list),
      optional(field('return_type', $._type)),
      field('body', $.block),
    ),

    fmt_expression: $ => seq(
      'fmt',
      $.fmt_string,
    ),

    fmt_string: $ => seq(
      '"',
      repeat(choice(
        $.fmt_content,
        $.fmt_interpolation,
        $.fmt_brace_escape,
        $.escape_sequence,
      )),
      '"',
    ),

    fmt_content: $ => /[^"\\{}\n]+/,

    fmt_brace_escape: $ => choice('{{', '}}'),

    fmt_interpolation: $ => seq('{', $._expression, '}'),

    copy_expression: $ => prec(PREC.UNARY, seq('copy', $._expression)),

    defer_expression: $ => prec.left(seq('defer', $._expression)),

    parallel_expression: $ => seq(
      'parallel',
      '(',
      field('handle', $.identifier),
      ')',
      field('body', $.block),
    ),

    detach_expression: $ => seq('detach', field('body', $.block)),

    unsafe_expression: $ => seq('unsafe', field('body', $.block)),

    assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', $._expression),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=')),
      field('right', $._expression),
    )),

    otherwise_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('value', $._expression),
      'otherwise',
      field('action', $.otherwise_action),
    )),

    otherwise_action: $ => choice(
      prec(PREC.POSTFIX + 1, seq('pass', 'up')),
      prec(PREC.POSTFIX + 1, 'break'),
      prec(PREC.POSTFIX + 1, 'continue'),
      prec.left(PREC.POSTFIX + 1, seq('return', optional($._expression))),
      prec.left(PREC.POSTFIX + 1, seq('error', $._expression)),
      prec.left(PREC.POSTFIX, $._expression),
    ),

    // =========================================================================
    // Types
    // =========================================================================

    _type: $ => choice(
      $.type_identifier,
      $.self_type,
      $.primitive_type,
      $.generic_type,
      $.union_type,
      $.function_type,
      $.unit_type,
      $.pointer_type,
      $.shared_type,
      $.read_type,
      $.infer_type,
    ),

    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    primitive_type: $ => choice(
      'i8', 'i16', 'i32', 'i64', 'i128', 'isize',
      'u8', 'u16', 'u32', 'u64', 'u128', 'usize',
      'f32', 'f64',
    ),

    union_type: $ => prec.left(PREC.OR, seq(
      $._type,
      'or',
      $._type,
    )),

    function_type: $ => prec.right(seq(
      'func',
      '(',
      commaSep($._type),
      ')',
      optional($._type),
    )),

    pointer_type: $ => seq(
      '*',
      choice('const', 'mut'),
      $._type,
    ),

    _pattern: $ => choice(
      $.wildcard_pattern,
      $.identifier,
      $._literal,
      $.enum_pattern,
      $.struct_pattern,
      $.tuple_pattern,
      $.or_pattern,
      $.typed_binding,
    ),

    wildcard_pattern: $ => '_',

    enum_pattern: $ => choice(
      // Qualified with args: Type.Variant(args)
      prec(PREC.POSTFIX + 1, seq(
        field('type', $.type_identifier),
        '.',
        field('variant', $.type_identifier),
        '(',
        commaSep($._pattern),
        ')',
      )),
      // Qualified without args: Type.Variant
      prec(PREC.POSTFIX, seq(
        field('type', $.type_identifier),
        '.',
        field('variant', $.type_identifier),
      )),
      // Unqualified with args: Variant(args)
      seq(
        field('variant', $.type_identifier),
        '(',
        commaSep($._pattern),
        ')',
      ),
    ),

    typed_binding: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    // =========================================================================
    // Literals
    // =========================================================================

    integer_literal: $ => token(choice(
      // Hex
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
      // Binary
      /0[bB][01][01_]*/,
      // Decimal
      /[0-9][0-9_]*/,
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
      )),
      '"',
    ),

    string_content: $ => /[^"\\\n]+/,

    boolean_literal: $ => choice('true', 'false'),

    identifier: $ => /[a-z_][a-zA-Z0-9_]*/,
