test/corpus/advanced_expressions.txt
==================
Fmt expression
==================

func main() {
    let s = fmt "hello {name}"
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (identifier)
        value: (fmt_expression
          (fmt_string
            (fmt_content)
            (fmt_interpolation
              (identifier))))))))

==================
Fmt brace escapes
==================

func main() {
    let s = fmt "literal {{braces}} and {x}"
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (identifier)
        value: (fmt_expression
          (fmt_string
            (fmt_content)
            (fmt_brace_escape)
            (fmt_content)
            (fmt_brace_escape)
            (fmt_content)
            (fmt_interpolation
              (identifier))))))))

==================
Closure expression
==================

func main() {
    let f = func(x: Int) -> Int {
        return x
    }
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (identifier)
        value: (closure_expression
          parameters: (parameter_list
            (parameter
              name: (identifier)
              type: (type_identifier)))
          return_type: (type_identifier)
          body: (block
            (expression_statement
              (return_expression))
            (expression_statement
              (identifier))))))))

==================
Copy expression
==================

func main() {
    let b = copy a
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (identifier)
        value: (copy_expression
          (identifier))))))

==================
Defer expression
==================

func main() {
    defer close(fd)
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (expression_statement
        (defer_expression
          (call_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                (identifier)))))))))

==================
Is expression
==================

func main() {
    if value is 93 {
        print("match")
    }
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (expression_statement
        (if_expression
          condition: (is_expression
            value: (identifier)
            pattern: (integer_literal))
          consequence: (block
            (expression_statement
              (call_expression
                function: (identifier)
                arguments: (argument_list
                  (argument
                    (string_literal
                      (string_content))))))))))))

==================
Otherwise pass up
==================

func main() {
    let val = try_parse(input) otherwise pass up
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (identifier)
        value: (otherwise_expression
          value: (call_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                (identifier))))
          action: (otherwise_action))))))

==================
Otherwise break
==================

func main() {
    while true {
        let item = queue.pop() otherwise break
    }
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (expression_statement
        (while_expression
          condition: (boolean_literal)
          body: (block
            (let_statement
              pattern: (identifier)
              value: (otherwise_expression
                value: (method_call_expression
                  object: (identifier)
                  method: (identifier)
                  arguments: (argument_list))
                action: (otherwise_action)))))))))

==================
Otherwise continue
==================

func main() {
    for item in items {
        let val = item.parse() otherwise continue
    }
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (expression_statement
        (for_expression
          pattern: (identifier)
          iterable: (identifier)
          body: (block
            (let_statement
              pattern: (identifier)
              value: (otherwise_expression
                value: (method_call_expression
                  object: (identifier)
                  method: (identifier)
                  arguments: (argument_list))
                action: (otherwise_action)))))))))

==================
Otherwise default
==================

func main() {
    let val = lookup(key) otherwise 0
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (identifier)
        value: (otherwise_expression
          value: (call_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                (identifier))))
          action: (otherwise_action
            (integer_literal)))))))

==================
Otherwise return
==================

func main() {
    let val = lookup(key) otherwise return
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (identifier)
        value: (otherwise_expression
          value: (call_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                (identifier))))
          action: (otherwise_action))))))

==================
Otherwise error
==================

func main() {
    let val = parse(x) otherwise error AppError{ msg: "failed" }
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (identifier)
        value: (otherwise_expression
          value: (call_expression
            function: (identifier)
            arguments: (argument_list
              (argument
                (identifier))))
          action: (otherwise_action
            (struct_literal
              type: (type_identifier)
              (struct_field_init
                name: (identifier)
                value: (string_literal
                  (string_content))))))))))

==================
String with braces
==================

func main() {
    let s = "JSON: {key}"
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (identifier)
        value: (string_literal
          (string_content))))))
